# skill-retriever

./: CLAUDE.md  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: index_all_local_skills.py  index_local_skill.py  ingest_large_repo.py  migrate_to_falkordb.py
skills/agent-rules-guardrails/: SKILL.md
skills/agent-s-computer-use/: SKILL.md
skills/anthropic-computer-use/: SKILL.md
skills/axorcist-accessibility/: SKILL.md
skills/browser-mcp-agent/: SKILL.md
skills/bytebot-desktop-agent/: SKILL.md
skills/claude-code-mcp/: SKILL.md
skills/conduit-mcp-fileops/: SKILL.md
skills/cua-computer-use/: SKILL.md
skills/evoagentx-self-evolution/: SKILL.md
skills/gogcli-google-suite/: SKILL.md
skills/imsg-messaging/: SKILL.md
skills/macos-automator-mcp/: SKILL.md
skills/mcporter-mcp-hub/: SKILL.md
skills/multi-mcp-agent/: SKILL.md
skills/openclaw-agent/: SKILL.md
skills/oracle-multi-model/: SKILL.md
skills/peekaboo-gui-automation/: SKILL.md
skills/science-plots/: SKILL.md
src/skill_retriever/: config.py  (+1 more)
tests/: __init__.py  conftest.py  test_component_memory.py  test_context_assembler.py  test_dependency_resolver.py  test_entities.py  test_falkordb_store.py  test_flow_pruner.py  test_graph_store.py  test_ingestion.py  test_init.py  test_installer.py  test_mcp_server.py  test_pipeline.py  test_ppr_engine.py  test_query_planner.py  test_resolver.py  test_score_fusion.py  test_vector_search.py  test_vector_store.py
(+124 files in other folders)
